--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "start": "node ./bin/www",
     "lint": "eslint src/js",
-    "start-dev": "nodemon app.js",
     "devstart": "nodemon ./bin/www",
     "serverstart": "DEBUG=mini-message-board:* npm run devstart"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "date-fns": "^2.30.0",
     "debug": "~2.6.9",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
