--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
     "cookie-parser": "~1.4.4",
     "date-fns": "^2.30.0",
     "debug": "~2.6.9",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "express-validator": "^7.0.1",
     "http-errors": "~1.6.3",
+    "mongodb": "^5.8.1",
+    "mongoose": "^7.4.4",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.4.8",
     "eslint": "^8.47.0",
     "nodemon": "^3.0.1"
   }
